<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_rectange"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:src="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_group"
            android:drawablePadding="@dimen/smallPadding"
            android:padding="15dp"
            android:text="@string/clinikk"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/minMargin"
            android:layout_marginEnd="@dimen/smallMargin"
            android:src="@drawable/ic_call"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivLanguages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/maxMargin"
            android:src="@drawable/ic_group_2"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
            app:layout_constraintEnd_toStartOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="@+id/imageView2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/maxPadding"
            android:text="@string/namma_clinikk_benefits"
            android:textColor="@color/black"
            android:textSize="@dimen/mainHeading"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_100sdp"
        android:layout_marginTop="@dimen/_50sdp"
        android:layout_marginEnd="@dimen/smallMargin"
        android:scaleType="centerCrop"
        android:src="@drawable/namma_clinkk"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        tools:context=".askPermission.AskPermissionFragment">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin"
                android:layout_marginTop="@dimen/margin"
                android:layout_marginEnd="@dimen/margin"
                android:drawableStart="@drawable/ic_group_1030"
                android:drawablePadding="@dimen/smallPadding"
                android:padding="@dimen/smallPadding"
                android:text="@string/get_unlimited_consultations_from_doctors_at_the_centers"
                android:textColor="@color/black"
                android:textSize="@dimen/mainContent"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin"
                android:layout_marginTop="@dimen/margin"
                android:layout_marginEnd="@dimen/margin"
                android:drawableStart="@drawable/ic_medicalcentre"
                android:drawablePadding="@dimen/smallPadding"
                android:padding="@dimen/smallPadding"
                android:text="@string/access_to_5_modern_centres_across_bangalore"
                android:textColor="@color/black"
                android:textSize="@dimen/mainContent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin"
                android:layout_marginTop="@dimen/margin"
                android:layout_marginEnd="@dimen/margin"
                android:drawableStart="@drawable/ic_labmeds1"
                android:drawablePadding="@dimen/smallPadding"

                android:padding="@dimen/smallPadding"
                android:text="@string/buy_discounted_medicines_and_lab_tests_at_the_centre"
                android:textColor="@color/black"
                android:textSize="@dimen/mainContent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"

                android:background="@drawable/ic_rectangle_locate"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/smallMargin"
                    android:padding="@dimen/smallPadding"
                    android:text="@string/find_nearest_clinkk_medical_centre"
                    android:textColor="@color/black"
                    android:textSize="@dimen/mainContent"
                    android:textStyle="bold"
                    app:flow_firstHorizontalBias=".2"
                    app:flow_horizontalBias=".2"
                    app:layout_constraintEnd_toStartOf="@+id/imageView4"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.button.MaterialButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Locate Now"
                    android:id="@+id/btnLocate"
                    android:backgroundTint="#0D7E51"
                    android:insetBottom="5dp"
                    android:insetTop="5dp"
                    app:cornerRadius="@dimen/_10sdp"
                    android:drawableLeft="@drawable/ic_vector"
                    app:layout_constraintEnd_toStartOf="@+id/imageView4"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView2" />


                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_100sdp"
                    android:src="@drawable/maps"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.appcompat.widget.LinearLayoutCompat>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>